[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/Character/Dummy.gd" type="Script" id=2]
[ext_resource path="res://Assets/Prefabs/Common/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Prefabs/Characters/ValueComponent.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Prefabs/Characters/ValueRestorationOverTime.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Prefabs/Characters/HealthBar.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[node name="Dummy" type="KinematicBody2D"]
position = Vector2( 400, 150 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Health" parent="." instance=ExtResource( 4 )]
max_value = 100.0
current = 1.0

[node name="HealthRestore" parent="." instance=ExtResource( 5 )]
valueComponentPath = NodePath("../Health")
value = 5.0
interval = 5.0

[node name="HealthBar" parent="." instance=ExtResource( 6 )]
